Make sure that the view is visible when navigate is called
Fix #2980

--- a/styles/mobile/common/navbar.less
+++ b/styles/mobile/common/navbar.less
@@ -32,6 +32,11 @@
     margin-right: auto;
 }
 
+.k-fx-hidden .km-view-title,
+.k-fx-hidden .km-dialog-title {
+    visibility: hidden;
+}
+
 .km-horizontal .km-view-title
 {
     line-height: 2em;
